--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
   <h1>Welcome to My Website</h1>
   <p>This is my first HTML file on GitHub. </p>
+  <h2>You have entered</h2>
 </body>
 </html>
